# usrp_example

./: CMakeLists.txt  README.md  usrp_main.c
cmake/: FindGit.cmake
common/: CMakeLists.txt  assertions.h  config.c  config.h  log.c  log.h  thread_create.c  thread_create.h
docs/: README.md  UHD_install.md
examples/: CMakeLists.txt  usrp_main.c  usrp_main.h  usrp_rx_to_file.c  usrp_tx_from_file.c
simde/: check.h  debug-trap.h  hedley.h  simde-align.h  simde-arch.h  simde-common.h  simde-complex.h  simde-constify.h  simde-detect-clang.h  simde-diagnostic.h  simde-f16.h  simde-features.h  simde-math.h
simde/arm/neon/: abd.h  abdl.h  abs.h  add.h  addhn.h  addlv.h  addw.h  addw_high.h  and.h  bcax.h  bic.h  bsl.h  cage.h  cagt.h  ceq.h  ceqz.h  cge.h  cgez.h  cgt.h  cgtz.h  cle.h  clez.h  cls.h  clt.h  cltz.h  clz.h  cmla.h  cmla_rot180.h  cmla_rot270.h  cmla_rot90.h  cnt.h  combine.h  cvt.h  dot.h  dot_lane.h  dup_lane.h  dup_n.h  eor.h  ext.h  fma.h  (+125 more)
simde/arm/sve/: add.h  and.h  cmplt.h  cnt.h  dup.h  ld1.h  ptest.h  ptrue.h  qadd.h  reinterpret.h  sel.h  st1.h  sub.h  types.h  whilelt.h
simde/x86/: avx.h  avx2.h  clmul.h  f16c.h  fma.h  gfni.h  mmx.h  sse.h  sse2.h  sse3.h  sse4.1.h  sse4.2.h  ssse3.h  svml.h  xop.h
simde/x86/avx512/: 2intersect.h  4dpwssd.h  4dpwssds.h  abs.h  add.h  adds.h  and.h  andnot.h  avg.h  bitshuffle.h  blend.h  broadcast.h  cmp.h  cmpeq.h  cmpge.h  cmpgt.h  cmple.h  cmplt.h  cmpneq.h  compress.h  conflict.h  copysign.h  cvt.h  cvts.h  cvtt.h  dbsad.h  div.h  dpbf16.h  dpbusd.h  dpbusds.h  dpwssd.h  dpwssds.h  expand.h  extract.h  fixupimm.h  fixupimm_round.h  flushsubnormal.h  fmadd.h  fmsub.h  fnmadd.h  (+66 more)
usrp/: CMakeLists.txt  usrp_lib.cc  usrp_lib.h
